--- a/Tests/UITests/UITests.xcodeproj/xcshareddata/xcschemes/CardinalKitHealthKitToFHIRAdapter.xcscheme
+++ b/Tests/UITests/UITests.xcodeproj/xcshareddata/xcschemes/CardinalKitHealthKitToFHIRAdapter.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1410"
+   LastUpgradeVersion = "1430"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,44 +14,29 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2F6D139128F5F384007C25D6"
-               BuildableName = "TestApp.app"
-               BlueprintName = "TestApp"
-               ReferencedContainer = "container:UITests.xcodeproj">
+               BlueprintIdentifier = "CardinalKitFHIRToFirestoreAdapter"
+               BuildableName = "CardinalKitFHIRToFirestoreAdapter"
+               BlueprintName = "CardinalKitFHIRToFirestoreAdapter"
+               ReferencedContainer = "container:../..">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Test"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
-      <CodeCoverageTargets>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CardinalKitFHIRToFirestoreAdapterTests"
-            BuildableName = "CardinalKitFHIRToFirestoreAdapterTests"
-            BlueprintName = "CardinalKitFHIRToFirestoreAdapterTests"
-            ReferencedContainer = "container:../..">
-         </BuildableReference>
-      </CodeCoverageTargets>
-      <TestPlans>
-         <TestPlanReference
-            reference = "container:TestApp.xctestplan"
-            default = "YES">
-         </TestPlanReference>
-      </TestPlans>
+      shouldAutocreateTestPlan = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2F6D13AB28F5F386007C25D6"
-               BuildableName = "TestAppUITests.xctest"
-               BlueprintName = "TestAppUITests"
-               ReferencedContainer = "container:UITests.xcodeproj">
+               BlueprintIdentifier = "CardinalKitFHIRToFirestoreAdapterTests"
+               BuildableName = "CardinalKitFHIRToFirestoreAdapterTests"
+               BlueprintName = "CardinalKitFHIRToFirestoreAdapterTests"
+               ReferencedContainer = "container:../..">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -66,16 +51,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2F6D139128F5F384007C25D6"
-            BuildableName = "TestApp.app"
-            BlueprintName = "TestApp"
-            ReferencedContainer = "container:UITests.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -83,16 +58,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2F6D139128F5F384007C25D6"
-            BuildableName = "TestApp.app"
-            BlueprintName = "TestApp"
-            ReferencedContainer = "container:UITests.xcodeproj">
+            BlueprintIdentifier = "CardinalKitFHIRToFirestoreAdapter"
+            BuildableName = "CardinalKitFHIRToFirestoreAdapter"
+            BlueprintName = "CardinalKitFHIRToFirestoreAdapter"
+            ReferencedContainer = "container:../..">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
