Improve App Files

--- a/Tests/UITests/TestApp/GoogleService-Info.plist
+++ b/Tests/UITests/TestApp/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>edu.stanford.cardinalkit.fhirtofirestoreadapter</string>
+	<string>edu.stanford.cardinalkit.fhirtofirestoreadapter.testapp</string>
 	<key>PROJECT_ID</key>
 	<string>cardinalkitfhirtofirestoreadapter</string>
 	<key>STORAGE_BUCKET</key>
