Update to Spezi

--- a/Tests/UITests/TestApp/GoogleService-Info.plist
+++ b/Tests/UITests/TestApp/GoogleService-Info.plist
@@ -13,9 +13,9 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>edu.stanford.cardinalkit.fhirtofirestoreadapter.testapp</string>
+	<string>edu.stanford.spezi.fhirtofirestoreadapter.testapp</string>
 	<key>PROJECT_ID</key>
-	<string>cardinalkitfhirtofirestoreadapter</string>
+	<string>spezifhirtofirestoreadapter</string>
 	<key>STORAGE_BUCKET</key>
 	<string>STORAGE_BUCKET</string>
 	<key>IS_ADS_ENABLED</key>
